--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTml>
 <html>
   <head>
-    <title>sheba's amazing website</title>
+    <title>sophie's amazing website</title>
     <link rel="stylesheet" href="style.css">
   </head>
     <body>
