--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
              <a href="index.html"> Home </a>
            </li>
            <li class="nav-li">
-             <a href="portfolio"> portfolilo </a>
+             <a href="portfolio.html"> portfolilo </a>
            </li>
          </ul>
       </nav>
