--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -70,6 +70,11 @@
 
         // TODO 2 - Variable declarations
 
+         var positionX = 0
+         positionX = positionX + 10; 
+         moveBoxTo(positionX)
+
+
 
 
 
