--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -83,7 +83,7 @@
 
 
         // TODO 2 - Variable declarations
-var positionX = 0
+       var positionX = 0 
 
 
 
@@ -106,14 +106,10 @@ moveBoxTo(positionX);
 
 
 }
+        positionX = positionX + 10;
+        moveBoxTo(positionX)
 
-
-
-
-
-
-
-        }
+            }
 
 
         /**
@@ -124,9 +120,8 @@ moveBoxTo(positionX);
          * - move the box to the left side of the screen.
          */
         function handleBoxClick() {
-        
-          positionX - 0
-          changeBoxText(0);
+        positionX - 0
+        changeBoxText(0);
 
                
 
