--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -105,9 +105,7 @@ moveBoxTo(positionX);
       
 
 
-}
-        positionX = positionX + 10;
-        moveBoxTo(positionX)
+
 
             }
 
@@ -120,7 +118,7 @@ moveBoxTo(positionX);
          * - move the box to the left side of the screen.
          */
         function handleBoxClick() {
-        positionX - 0
+        positionX = 0
         changeBoxText(0);
 
                
