--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -83,7 +83,8 @@
 
 
         // TODO 2 - Variable declarations
-       var positionX = 0 
+       var positionX = 0;
+       var points = 0;
 
 
 
@@ -102,6 +103,7 @@
         function update() {
 positionX = positionX + 10; 
 moveBoxTo(positionX); 
+
       
 
 
@@ -120,6 +122,8 @@ moveBoxTo(positionX);
         function handleBoxClick() {
         positionX = 0
         changeBoxText(0);
+        changeBoxText(points);
+        points = points + 1
 
                
 
