--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -85,6 +85,7 @@
         // TODO 2 - Variable declarations
        var positionX = 0;
        var points = 0;
+       var speed = 10
 
 
 
@@ -101,8 +102,9 @@
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-positionX = positionX + 10; 
+positionX = positionX + speed;
 moveBoxTo(positionX); 
+
 
       
 
@@ -124,6 +126,7 @@ moveBoxTo(positionX);
         changeBoxText(0);
         changeBoxText(points);
         points = points + 1
+        speed = speed + 3
 
                
 
