--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -104,7 +104,9 @@
         function update() {
 positionX = positionX + speed;
 moveBoxTo(positionX); 
-
+if(positionX > boardWidth){
+speed = speed * -1
+}
 
       
 
