--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -131,7 +131,7 @@ speed *= -1
         changeBoxText(0);
         changeBoxText(points);
         points = points + 1
-        speed = speed + 3
+        speed = 3 * points + 10;
 
                
 
